Revert "Merge branch 'JanBranch'"
This reverts commit 5e8066f960f05518177833b89ffbaf93d3f6aab2, reversing
changes made to daf02f37deb9ee25a5288807fac582394985897b.

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,12 +14,11 @@ body
 {
     background: linear-gradient(rgba(255, 255, 255, 0.5),
                                 rgba(255, 255, 255, 0.5)), 
-                                rgba(242, 153, 33, 0.5)
                                 url(../images/bggoku.jpg) no-repeat;
+    background-color: #F29921;
     background-repeat: no-repeat;
-    background-position: bottom left;
+    background-position: left;
     background-attachment: fixed;
-    background-size: 300px 500px;
 /*    background-size: cover;*/
     font-family: 'Open Sans', sans-serif;
     margin: 0;
@@ -136,11 +135,11 @@ input
 
 header
 {
-    background: rgba(248, 91, 26, 0.5);
+    background: rgba(248, 91, 26, 0.6);
     text-align: center;
     font-family: 'Saiyan Font', Arial, sans-serif;
-    color: linear-gradient(rgba(7, 32, 131, 0.2));
-    font-size: 20px;
+    color: #072083;
+    font-size: 25px;
     
 
 /*
@@ -227,7 +226,7 @@ footer
     border-radius: 10px;
 /*    background-color: #FFD7C1;*/
     margin: 10% 20%;
-    background: linear-gradient(rgba(255, 255, 255, 0.5),
+        background: linear-gradient(rgba(255, 255, 255, 0.5),
                                 rgba(255, 255, 255, 0.5)), 
                                 url(../images/bgvalley.png) no-repeat;
     background-color: #F29921;
@@ -254,24 +253,8 @@ footer
     border-width: 5px;
     border-color: #072083;
     border-radius: 10px;
-/*    background-color: #FFD7C1;*/
-    margin: 10% 20%;
-    background: linear-gradient(rgba(255, 255, 255, 0.5),
-                                rgba(255, 255, 255, 0.5)), 
-                                url(../images/bgvalley.png) no-repeat;
-    background-color: #F29921;
-    background-repeat: no-repeat;
-    background-position: center;
-/*    background-attachment: fixed;*/
-    background-size: 100% 100%;
-    margin: 10% auto;
-    min-width: 450px;
-    min-height: 285px;
-    max-width: 400px;
-    max-height: 1200px;
-    padding: 0 0 0 20px;
-    
-    box-shadow: 10px 10px 10px grey; 
+    background-color: #FFD7C1;
+    margin: 10% 20%; 
 }
 
 #contactInfoDiv
@@ -280,24 +263,8 @@ footer
     border-width: 5px;
     border-color: #072083;
     border-radius: 10px;
-/*    background-color: #FFD7C1;*/
-    margin: 10% 20%;
-    background: linear-gradient(rgba(255, 255, 255, 0.5),
-                                rgba(255, 255, 255, 0.5)), 
-                                url(../images/bgvalley.png) no-repeat;
-    background-color: #F29921;
-    background-repeat: no-repeat;
-    background-position: center;
-/*    background-attachment: fixed;*/
-    background-size: 100% 100%;
-    margin: 10% auto;
-    min-width: 450px;
-    min-height: 285px;
-    max-width: 400px;
-    max-height: 1200px;
-    padding: 0 0 0 20px;
-    
-    box-shadow: 10px 10px 10px grey;
+    background-color: #FFD7C1;
+    margin: 10% 20%; 
 }
 
 #addContactDiv
@@ -306,24 +273,8 @@ footer
     border-width: 5px;
     border-color: #072083;
     border-radius: 10px;
-/*    background-color: #FFD7C1;*/
-    margin: 10% 20%;
-    background: linear-gradient(rgba(255, 255, 255, 0.5),
-                                rgba(255, 255, 255, 0.5)), 
-                                url(../images/bgvalley.png) no-repeat;
-    background-color: #F29921;
-    background-repeat: no-repeat;
-    background-position: center;
-/*    background-attachment: fixed;*/
-    background-size: 100% 100%;
-    margin: 10% auto;
-    min-width: 450px;
-    min-height: 285px;
-    max-width: 400px;
-    max-height: 1200px;
-    padding: 0 0 0 20px;
-    
-    box-shadow: 10px 10px 10px grey;
+    background-color: #FFD7C1;
+    margin: 10% 20%;  
 }
 
 #editContactDiv
@@ -332,27 +283,6 @@ footer
     border-width: 5px;
     border-color: #072083;
     border-radius: 10px;
-/*    background-color: #FFD7C1;*/
-    margin: 10% 20%;
-    background: linear-gradient(rgba(255, 255, 255, 0.5),
-                                rgba(255, 255, 255, 0.5)), 
-                                url(../images/bgvalley.png) no-repeat;
-    background-color: #F29921;
-    background-repeat: no-repeat;
-    background-position: center;
-/*    background-attachment: fixed;*/
-    background-size: 100% 100%;
-    margin: 10% auto;
-    min-width: 450px;
-    min-height: 285px;
-    max-width: 400px;
-    max-height: 1200px;
-    padding: 0 0 0 20px;
-    
-    box-shadow: 10px 10px 10px grey;
-}
-
-#contactSearch
-{
-    margin: auto 5px;
+    background-color: #FFD7C1;
+    margin: 10% 20%;  
 }
