--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ html
 
 body 
 {
+    /* background-image: linear-gradient(to right, #F85B1A, rgba(248, 91, 26, 0.05)); */
     background: linear-gradient(rgba(255, 255, 255, 0.5),
                                 rgba(255, 255, 255, 0.5)), 
                                 rgba(242, 153, 33, 0.5)
@@ -88,7 +89,8 @@ body
 h1
 {
     color: #072083;
-    margin: 0;
+    margin-top: 25px;
+    display: inline-block;
 }
 
 h2
@@ -121,34 +123,34 @@ input
 
 /* Header and Footer 
 -------------------*/
-.sixstar
-{
-    float: center;
-}
 
 .headBanner
 {
     max-width: 950px;
     margin: 0 auto;
+    overflow: auto;
+    display: inline-block;
     padding: 5px;
-    overflow: hidden;
 }
 
 header
 {
-    background: rgba(248, 91, 26, 0.5);
-    text-align: center;
+    background-image: linear-gradient(to right, #F85B1A, rgba(248, 91, 26, 0.05));
     font-family: 'Saiyan Font', Arial, sans-serif;
-    color: linear-gradient(rgba(7, 32, 131, 0.2));
+    text-align: center;
     font-size: 20px;
-    
+    margin: 0 0;
+}
 
-/*
-    border-style: solid;
-    border-width: 0.5px;
-    border-color: #072083;
-    border-radius: 5px;
-*/
+.banner-img
+{
+    height: auto;
+    width: auto;
+    max-width: 65px;
+    max-height: 65px;
+    float: left;
+    margin-right: 15px;
+    margin-top: 5px;
 }
 
 .footBanner
@@ -165,26 +167,10 @@ footer
     text-align: center;
     color: #072083;
     font-size: 12px;
-    
-/*
-    border-style: solid;
-    border-width: 0.5px;
-    border-color: #072083;
-    border-radius: 5px;
-*/
-    
     position: fixed;
     bottom: 0;
     width: 100%;
     
-}
-
-.banner-img
-{
-    height: auto;
-    width: auto;
-    max-width: 65px;
-    max-height: 65px;
 }
 
 /* Login Page 
@@ -280,67 +266,12 @@ footer
     border-width: 5px;
     border-color: #072083;
     border-radius: 10px;
-/*    background-color: #FFD7C1;*/
-    margin: 10% 20%;
     background: linear-gradient(rgba(255, 255, 255, 0.5),
                                 rgba(255, 255, 255, 0.5)), 
                                 url(../images/bgvalley.png) no-repeat;
     background-color: #F29921;
     background-repeat: no-repeat;
     background-position: center;
-/*    background-attachment: fixed;*/
-    background-size: 100% 100%;
-    margin: 10% auto;
-    min-width: 450px;
-    min-height: 285px;
-    max-width: 400px;
-    max-height: 1200px;
-    padding: 0 0 0 20px;
-    
-    box-shadow: 10px 10px 10px grey;
-}
-
-#addContactDiv
-{
-    border-style: solid;
-    border-width: 5px;
-    border-color: #072083;
-    border-radius: 10px;
-/*    background-color: #FFD7C1;*/
-    margin: 10% 20%;
-    background: linear-gradient(rgba(255, 255, 255, 0.5),
-                                rgba(255, 255, 255, 0.5)), 
-                                url(../images/bgvalley.png) no-repeat;
-    background-color: #F29921;
-    background-repeat: no-repeat;
-    background-position: center;
-/*    background-attachment: fixed;*/
-    background-size: 100% 100%;
-    margin: 10% auto;
-    min-width: 450px;
-    min-height: 285px;
-    max-width: 400px;
-    max-height: 1200px;
-    padding: 0 0 0 20px;
-    
-    box-shadow: 10px 10px 10px grey;
-}
-
-#editContactDiv
-{
-    border-style: solid;
-    border-width: 5px;
-    border-color: #072083;
-    border-radius: 10px;
-/*    background-color: #FFD7C1;*/
-    margin: 10% 20%;
-    background: linear-gradient(rgba(255, 255, 255, 0.5),
-                                rgba(255, 255, 255, 0.5)), 
-                                url(../images/bgvalley.png) no-repeat;
-    background-color: #F29921;
-    background-repeat: no-repeat;
-    background-position: center;
-/*    background-attachment: fixed;*/
     background-size: 100% 100%;
     margin: 10% auto;
     min-width: 450px;
@@ -355,4 +286,56 @@ footer
 #contactSearch
 {
     margin: auto 5px;
+}
+
+/* Modal Implementation 6/8 - Kenny
+-------------------------------------*/
+
+.contactModal, .editContactModal
+{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content
+{
+    border-style: solid;
+    border-width: 5px;
+    border-color: #072083;
+    border-radius: 10px;
+
+    background: linear-gradient(rgba(255, 255, 255, 0.5),
+                                rgba(255, 255, 255, 0.5)), 
+                                url(../images/bgpond.png) no-repeat;
+    background-color: #F29921;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100% 100%;
+
+    min-width: 450px;
+    min-height: 285px;
+    max-width: 400px;
+    max-height: 1200px;
+    padding: 0 0 0 20px;
+   
+    margin: 20% auto;
+    padding: 20px;
+    width: 70%;
+    height: 55%;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
+    animation-name: modalOpen;
+    animation-duration: 1s;
+}
+
+@keyframes modalOpen
+{
+    from {opacity: 0}
+    to {opacity: 1}
 }
