--- a/css/styles.css
+++ b/css/styles.css
@@ -365,7 +365,7 @@ footer
     background-color: rgba(0, 0, 0, 0.6);
 }
 
-.modal-two
+.modal-add
 {
     display: none;
     position: fixed;
@@ -375,7 +375,22 @@ footer
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.95);
+    background-color: rgba(0, 0, 0, 0.85);
+    font-size: 0.9em;
+    font-family: Capriola, sans-serif;
+}
+
+.modal-search
+{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.85);
     font-size: 0.9em;
     font-family: Capriola, sans-serif;
 }
