Revert "Hopefully Kenny's Final changes"

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+    
 /* Global
 ------------------*/
 
@@ -467,7 +468,7 @@ hr
     animation: backgroundFade 3s;
 }
 
-/* .modal-search
+.modal-search
 {
     display: none;
     position: fixed;
